// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort render  1`] = `
<div>
   
  <div
    class="sort"
  >
    <div
      class="sort-box"
    >
      <div
        class="sort-box-left"
      >
        <nav
          arial-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-hn8qoe-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/products"
              >
                Products
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="sort-box-right"
      >
        <div
          class="sort-box-right-title"
        >
           Sort by: 
        </div>
        <div
          class="sort-box-right-output"
          data-testid="output"
        >
          Default
          <svg
            class="sort-box-right-output-iconclose"
            data-testid="chevron"
            fill="currentColor"
            height="25"
            name="chevron"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Sort test dropdown 1-9 Asc 1`] = `
<div>
   
  <div
    class="sort"
  >
    <div
      class="sort-box"
    >
      <div
        class="sort-box-left"
      >
        <nav
          arial-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-hn8qoe-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/products"
              >
                Products
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="sort-box-right"
      >
        <div
          class="sort-box-right-title"
        >
           Sort by: 
        </div>
        <div
          class="sort-box-right-output"
          data-testid="output"
        >
          1-9 Asc
          <svg
            class="sort-box-right-output-iconclose"
            data-testid="chevron"
            fill="currentColor"
            height="25"
            name="chevron"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Sort test dropdown 1-9 Des 1`] = `
<div>
   
  <div
    class="sort"
  >
    <div
      class="sort-box"
    >
      <div
        class="sort-box-left"
      >
        <nav
          arial-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-hn8qoe-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/products"
              >
                Products
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="sort-box-right"
      >
        <div
          class="sort-box-right-title"
        >
           Sort by: 
        </div>
        <div
          class="sort-box-right-output"
          data-testid="output"
        >
          9-1 Desc
          <svg
            class="sort-box-right-output-iconclose"
            data-testid="chevron"
            fill="currentColor"
            height="25"
            name="chevron"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Sort test dropdown A-Z Asc 1`] = `
<div>
   
  <div
    class="sort"
  >
    <div
      class="sort-box"
    >
      <div
        class="sort-box-left"
      >
        <nav
          arial-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-hn8qoe-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/products"
              >
                Products
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="sort-box-right"
      >
        <div
          class="sort-box-right-title"
        >
           Sort by: 
        </div>
        <div
          class="sort-box-right-output"
          data-testid="output"
        >
          A-Z Asc
          <svg
            class="sort-box-right-output-iconclose"
            data-testid="chevron"
            fill="currentColor"
            height="25"
            name="chevron"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Sort test dropdown Default 1`] = `
<div>
   
  <div
    class="sort"
  >
    <div
      class="sort-box"
    >
      <div
        class="sort-box-left"
      >
        <nav
          arial-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-hn8qoe-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/products"
              >
                Products
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="sort-box-right"
      >
        <div
          class="sort-box-right-title"
        >
           Sort by: 
        </div>
        <div
          class="sort-box-right-output"
          data-testid="output"
        >
          Default
          <svg
            class="sort-box-right-output-iconclose"
            data-testid="chevron"
            fill="currentColor"
            height="25"
            name="chevron"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Sort test dropdown Z-A Desc 1`] = `
<div>
   
  <div
    class="sort"
  >
    <div
      class="sort-box"
    >
      <div
        class="sort-box-left"
      >
        <nav
          arial-label="breadcrumb"
          class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-hn8qoe-MuiTypography-root-MuiBreadcrumbs-root"
        >
          <ol
            class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-azkret-MuiTypography-root-MuiLink-root"
                href="/products"
              >
                Products
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="sort-box-right"
      >
        <div
          class="sort-box-right-title"
        >
           Sort by: 
        </div>
        <div
          class="sort-box-right-output"
          data-testid="output"
        >
          Z-A Desc
          <svg
            class="sort-box-right-output-iconclose"
            data-testid="chevron"
            fill="currentColor"
            height="25"
            name="chevron"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;
